data/derived/comb/progs/unify/prog6932.ml.out
Characters 53-54:
  in wwhile ((fx b),b);;
                    ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
